--- a/cabin-manager/src/features/login/login.scss
+++ b/cabin-manager/src/features/login/login.scss
@@ -23,6 +23,7 @@ body{
     align-items: center;
     height: 50%;
     width: 180px;
+    padding-bottom: 55px;
 
     fieldset{
       border: 1px solid white;
